bynkc/tests/fixtures/negative/495_messages_malformed_icu_duplicate_arm/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "cart.count" => "{n, plural, one {a} one {b} other {c}}"
}
